--- a/language-configuration.json
+++ b/language-configuration.json
@@ -1,21 +1,23 @@
 {
     "comments": {
-        "lineComment": "#",
+        "lineComment": "//",
+        "blockComment": ["/*", "*/"]
     },
     // symbols used as brackets
     "brackets": [
-        ["[", "]"]
+        //["[", "]"]
     ],
     // symbols that are auto closed when typing
     "autoClosingPairs": [
-        ["[", "]"],
         ["\"", "\""],
-        ["'", "'"]
+        ["'", "'"],
+        ["/*","*/"]
     ],
     // symbols that can be used to surround a selection
     "surroundingPairs": [
-        ["[", "]"],
+
         ["\"", "\""],
-        ["'", "'"]
+        ["'", "'"],
+        ["/*","*/"]
     ]
 }
